--- a/updater/gui/pom.xml
+++ b/updater/gui/pom.xml
@@ -52,8 +52,7 @@
     </dependency>
     <dependency>
       <groupId>org.daisy.pipeline</groupId>
-      <artifactId>updater</artifactId>
-      <version>1.0.0</version>
+      <artifactId>updater-wrapper</artifactId>
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
