--- a/utils/xproc-maven-plugin/xproc-engine-calabash/pom.xml
+++ b/utils/xproc-maven-plugin/xproc-engine-calabash/pom.xml
@@ -27,9 +27,9 @@
       <version>1.0.18</version>
     </dependency>
     <dependency>
-      <groupId>net.sf.saxon</groupId>
-      <artifactId>Saxon-HE</artifactId>
-      <version>9.5.1-5</version>
+      <groupId>org.daisy.libs</groupId>
+      <artifactId>saxon-he</artifactId>
+      <version>9.5.1.5</version>
     </dependency>
     <dependency>
       <groupId>com.thaiopensource</groupId>
