--- a/framework/calabash-custom-steps/pom.xml
+++ b/framework/calabash-custom-steps/pom.xml
@@ -22,8 +22,8 @@
       <artifactId>com.xmlcalabash</artifactId>
     </dependency>
     <dependency>
-      <groupId>net.sf.saxon</groupId>
-      <artifactId>Saxon-HE</artifactId>
+      <groupId>org.daisy.libs</groupId>
+      <artifactId>saxon-he</artifactId>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
