--- a/libs/osgi-libs/calabash/pom.xml
+++ b/libs/osgi-libs/calabash/pom.xml
@@ -36,9 +36,9 @@
   <dependencies>
     <!-- required -->
     <dependency>
-      <groupId>net.sf.saxon</groupId>
-      <artifactId>Saxon-HE</artifactId>
-      <version>9.5.1-8</version>
+      <groupId>org.daisy.libs</groupId>
+      <artifactId>saxon-he</artifactId>
+      <version>9.5.1.5</version>
     </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
