--- a/utils/xspec-maven-plugin/xspec-runner/pom.xml
+++ b/utils/xspec-maven-plugin/xspec-runner/pom.xml
@@ -24,9 +24,9 @@
       <version>15.0</version>
     </dependency>
     <dependency>
-      <groupId>net.sf.saxon</groupId>
-      <artifactId>Saxon-HE</artifactId>
-      <version>9.5.1-1</version>
+      <groupId>org.daisy.libs</groupId>
+      <artifactId>saxon-he</artifactId>
+      <version>9.5.1.5</version>
     </dependency>
     <dependency>
       <groupId>xml-resolver</groupId>
