--- a/modules/braille/liblouis-utils/pom.xml
+++ b/modules/braille/liblouis-utils/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>org.daisy.pipeline.modules.braille</groupId>
   <artifactId>liblouis-utils</artifactId>
-  <version>4.0.1-SNAPSHOT</version>
+  <version>4.1.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
   <name>DP2 Braille Modules :: liblouis-utils</name>
@@ -133,7 +133,7 @@
   </dependencies>
 
   <properties>
-    <liblouis.version>3.19.0</liblouis.version>
+    <liblouis.version>3.21.0-p1</liblouis.version>
     <liblouisutdml.liblouis.version>2.6.3</liblouisutdml.liblouis.version>
     <expose-services>
       org.daisy.pipeline.modules.impl.Module_liblouis_utils,
